[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "language-runner"
version = "0.1.0"
description = "Shared language environment runner"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
language_runner = ["utils/*.js"]